<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.harmakit.practice_test1.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="8"
        android:text="+7"
        android:id="@+id/phoneEditText"
        android:phoneNumber="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clientTypeSwitch"
        android:longClickable="false"
        android:checked="false"
        android:text="@string/legalEntityAskText"
        android:layout_below="@+id/phoneEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lastnameText"
        android:ems="10"
        android:id="@+id/lastnameEditText"
        android:layout_below="@+id/firstnameEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstnameText"
        android:ems="10"
        android:id="@+id/firstnameEditText"
        android:layout_below="@+id/clientTypeSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/companynameText"
        android:ems="10"
        android:id="@+id/companynameEditText"
        android:layout_below="@+id/clientTypeSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/patronymicText"
        android:ems="10"
        android:id="@+id/patronymicEditText"
        android:layout_below="@+id/lastnameEditText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:id="@+id/sendRegisterButton"
        android:onClick="onRegisterClicked"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignRight="@+id/phoneEditText"
        android:layout_alignEnd="@+id/phoneEditText"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/patronymicEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/passwordText"
        />


</RelativeLayout>
</ScrollView>

