<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.harmakit.practice_test1.StartScreenActivity">

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/helloTextViewText"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonText"
        android:id="@+id/registartionActivityButton"
        android:onClick="openRegisterActivity"
        android:layout_below="@+id/loginActivityButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:id="@+id/loginActivityButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="openLoginActivity"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Создать запрос"
        android:id="@+id/createRequestButton"
        android:onClick="openRequestActivity"
        android:layout_below="@+id/registartionActivityButton"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выйти"
        android:onClick="logout"
        android:id="@+id/logoutButton"
        android:layout_below="@+id/createRequestButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
